--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
   <body>
 
-    <header class="topbar">
+    <header id="top">
       <section>
         <h1>
           William Wong
@@ -34,41 +34,98 @@
           </ul>
       </nav>
     </header>
+
+    <section class="mainImage">
+      <img id="mainImage" src="images/Screen Shot 2022-03-26 at 5.07.07 PM.png" alt="cool image">
+      <h1>No, Really, He's A Cool Guy!</h1>
+    </section>
+
     <main>
-      <section class="mainImage">
-        <img id="mainImage" src="images/Screen Shot 2022-03-26 at 5.07.07 PM.png" alt="cool image">
-        <h1>No, Really, He's A Cool Guy!</h1>
-      </section>
-      <section>
-        <h1>
-          About
-        </h1>
-        <article>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, at? Expedita, deserunt.
-        </article>
-      </section>
-      <section>
-        <h1>Work</h1>
-        <article class="workItem">
-          <img src="" alt="work image">
-        </article>
-        <article class="workItem">
-          <img src="" alt="work image">
-        </article>
-        <article class="workItem">
-          <img src="" alt="work image">
-        </article>
-      </section>
-      <section>
-        <h1>Contact</h1>
-        <ul>
-          <li>
-            <a href="">billycwong19@gmail.com</a>
-          </li>
-          <li>
-            <a href="">GitHub</a>
-          </li>
-        </ul>
+
+      <section class="card">
+        <section id="about">
+          <article class="cardHeader">
+            <h1>
+              About
+            </h1>
+          </article>
+          <article class="cardInfo">
+            <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, at? Expedita, deserunt.
+            </p>
+          </article>
+        </section>
+
+        <section id="work">
+          <article class="cardHeader">
+            <h1>
+              Work
+            </h1>
+          </article>
+          
+          <section class="cardInfo">
+            <section id="mainWorkCard">
+              <article id="mainWorkItem">
+                <img src="images/stockphoto1.jpg" alt="workImage">
+                <div class="workImageHeader">
+                  <h1>
+                    Project Symphony
+                  </h1>
+                  <p>
+                    HTML/CSS
+                  </p>
+                </div>
+              </article>
+            </section>
+
+            <section class="workCard">
+              <article class="workItem">
+                <img src="images/stockphoto2.jpg" alt="workImage">
+                <div class="workImageHeader">
+                  <h1>
+                    Project Symphony
+                  </h1>
+                  <p>
+                    HTML/CSS
+                  </p>
+                </div>
+              </article>
+            </section>
+
+            <section class="workCard">
+              <article class="workItem">
+                <img src="images/stockphoto3.jpg" alt="workImage">
+                <div class="workImageHeader">
+                  <h1>
+                    Project Symphony
+                  </h1>
+                  <p>
+                    HTML/CSS
+                  </p>
+                </div>
+              </article>
+            </section>
+
+          </section>
+        </section>
+
+        <section id="contact">
+          <article class="cardHeader">
+            <h1>
+              Contact
+            </h1>
+          </article>
+          <article class="cardInfo">
+            <ul>
+              <li>
+                <a href="">billycwong19@gmail.com</a>
+              </li>
+              <li>
+                <a href="">GitHub</a>
+              </li>
+            </ul>
+          </article>
+        </section>
       </section>
     </main>
       
