more changes, but really close to finishing touches.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </header>
 
     <section class="mainImage">
-      <img id="mainImage" src="images/Screen Shot 2022-03-26 at 5.07.07 PM.png" alt="cool image">
+      <img id="mainImage" src="images/stockphoto4.jpg" alt="cool image">
       <h1>No, Really, He's A Cool Guy!</h1>
     </section>
-
+    
     <main>
 
       <section class="card">
@@ -51,7 +51,7 @@
           </article>
           <article class="cardInfo">
             <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, at? Expedita, deserunt.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae labore nulla ea eum ex, magnam accusamus modi, veniam at optio ipsam impedit deserunt similique voluptatum libero aut possimus iusto voluptatibus!
             </p>
           </article>
         </section>
@@ -66,7 +66,7 @@
           <section class="cardInfo">
             <section id="mainWorkCard">
               <article id="mainWorkItem">
-                <img src="images/stockphoto1.jpg" alt="workImage">
+                <a href="#" target="_blank"><img src="images/stockphoto1.jpg" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
                     Project Symphony
@@ -80,13 +80,13 @@
 
             <section class="workCard">
               <article class="workItem">
-                <img src="images/stockphoto2.jpg" alt="workImage">
+                <a href="#" target="_blank"><img src="images/stockphoto2.jpg" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
-                    Project Symphony
+                    Project Starfish
                   </h1>
                   <p>
-                    HTML/CSS
+                    JavaScript
                   </p>
                 </div>
               </article>
@@ -94,13 +94,13 @@
 
             <section class="workCard">
               <article class="workItem">
-                <img src="images/stockphoto3.jpg" alt="workImage">
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/stockphoto3.jpg" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
-                    Project Symphony
+                    Project Hotel
                   </h1>
                   <p>
-                    HTML/CSS
+                    HTML/CSS/Javascript
                   </p>
                 </div>
               </article>
@@ -118,17 +118,19 @@
           <article class="cardInfo">
             <ul>
               <li>
-                <a href="">billycwong19@gmail.com</a>
+                <a id="github" href="https://github.com/billycwong19" target="_blank"><img src="images/GitHub-Mark-32px.png" alt="github icon"></a>
               </li>
               <li>
-                <a href="">GitHub</a>
+                <a href="mailto:billycwong19@gmail.com" target="_blank"><img src="images/icons8-gmail-48.png" alt="email icon"></a>
               </li>
             </ul>
           </article>
         </section>
       </section>
     </main>
-      
+    <footer>
+      <a href="#top"><p>&copy;William Wong</p></a>
+    </footer>
   </body>
 
   </html>
