--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <body>
 
     <header id="top">
-      <section>
+      <section id="headerSection">
         <h1>
           William Wong
         </h1>
+        <img src="images/AvatarMaker.png" alt="william avatar">
       </section>
       <nav>
           <ul>
@@ -51,7 +52,11 @@
           </article>
           <article class="cardInfo">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae labore nulla ea eum ex, magnam accusamus modi, veniam at optio ipsam impedit deserunt similique voluptatum libero aut possimus iusto voluptatibus!
+              William is a musician and an amateur chef. Patterns and repetition are a staple in his everlasting reach for mastery and self-fulfillment. Learning and applying concepts are part of his nature and what he does best. From learning how to play a new song by ear, to watching a Youtube video on how to fry chicken, and then applying those ideas immediately, you get William in his natural self. Web development is just another tool for William to learn and to apply concepts from his own existing knowledge. 
+            </p>
+            <br>
+            <p>
+              And to make more money. 
             </p>
           </article>
         </section>
@@ -66,10 +71,10 @@
           <section class="cardInfo">
             <section id="mainWorkCard">
               <article id="mainWorkItem">
-                <a href="#" target="_blank"><img src="images/stockphoto1.jpg" alt="workImage"></a>
+                <a href="https://billycwong19.github.io/miniproject_2/" target="_blank"><img src="images/screenshot.png" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
-                    Project Symphony
+                    miniproject_2
                   </h1>
                   <p>
                     HTML/CSS
@@ -80,13 +85,13 @@
 
             <section class="workCard">
               <article class="workItem">
-                <a href="#" target="_blank"><img src="images/stockphoto2.jpg" alt="workImage"></a>
+                <a href="https://billycwong19.github.io/02-Homework/" target="_blank"><img src="images/screenshot_portfolio.png" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
-                    Project Starfish
+                    Portfolio
                   </h1>
                   <p>
-                    JavaScript
+                    HTML/CSS
                   </p>
                 </div>
               </article>
@@ -94,10 +99,10 @@
 
             <section class="workCard">
               <article class="workItem">
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/stockphoto3.jpg" alt="workImage"></a>
+                <a href="https://billycwong19.github.io/navbar_1/" target="_blank"><img src="images/screenshot_navbar_1.png" alt="workImage"></a>
                 <div class="workImageHeader">
                   <h1>
-                    Project Hotel
+                    navbar_1
                   </h1>
                   <p>
                     HTML/CSS/Javascript
