updated readme with screenshot

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           </article>
           <article class="cardInfo">
             <p>
-              William is a musician and an amateur chef. Patterns and repetition are a staple in his everlasting reach for mastery and self-fulfillment. Learning and applying concepts are part of his nature and what he does best. From learning how to play a new song by ear, to watching a Youtube video on how to fry chicken, and then applying those ideas immediately, you get William in his natural self. Web development is just another tool for William to learn and to apply concepts from his own existing knowledge. 
+              William is a musician and an amateur chef. Patterns and repetition are a staple in his everlasting reach for mastery and self-fulfillment. Learning and applying concepts are part of his nature and what he does best. From learning how to play a new song by ear, to watching a Youtube video on how to fry chicken, and then applying those ideas immediately, you get William in his natural self. Web development is just another path for William to learn from.
             </p>
             <br>
             <p>
-              And to make more money. 
+              <!-- And to make more money.  -->
             </p>
           </article>
         </section>
